--- a/themes/raiser/sass/components/_leaderboard.scss
+++ b/themes/raiser/sass/components/_leaderboard.scss
@@ -1,7 +1,3 @@
-#block-views-leaderboard-block {
-  clear: both;
-}
-
 .page-campaigns-leaderboard {
   table {
     width: 100%;
@@ -24,5 +20,85 @@
   }
   .view-content {
     margin-top: em(32);
+  }
+}
+
+#block-views-leaderboard-block {
+  box-sizing: border-box;
+  clear: both;
+  padding-left: em(8);
+  padding-right: em(8);
+
+  h2 {
+    font-size: em(20);
+    margin-top: em(8);
+  }
+  .view-filters {
+    position: relative;
+    .views-exposed-widget {
+      margin-bottom: em(16);
+      padding-right: 0;
+      width: auto;
+    }
+    .views-submit-button {
+      position: absolute;
+      right: 0;
+      top: em(33);
+    }
+  }
+
+  .entity-redhen-campaign-page {
+    font-size: em(14);
+    min-height: em(65);
+    position: relative;
+  }
+  .redhen_campaign_page_title {
+    left: em(64);
+    margin-top: 0;
+    position: absolute;
+    top: 0;
+    z-index: 10;
+    a {
+      color: $black;
+    }
+  }
+  .field-name-redhen-campaign-goal {
+    color: $black;
+    font-size: em(16);
+    left: em(64);
+    padding-left: 0;
+    padding-top: em(24);
+    position: absolute;
+    top: em(0);
+    .rhc_progress {
+      display: inline-block;
+      font-size: em(16);
+    }
+  }
+  img {
+    width: em(48);
+    border-radius: em(8);
+  }
+  .pager {
+    margin-top: 0;
+  }
+  .more-link {
+    @include clear-btn;
+    margin-left: 0em;
+    margin: 0 auto;
+    padding: em(5) em(10);
+    text-align: center;
+    width: 50%;
+
+    &:hover, &:hover a {
+      color: $white;
+    }
+    a {
+      color: $primary;
+      text-transform: capitalize;
+      &:hover {
+        color: $white;
+      }
+    }
   }
 }
