Hide empty black in sidebar, more cleanup.

--- a/themes/raiser/sass/components/_sidebar.scss
+++ b/themes/raiser/sass/components/_sidebar.scss
@@ -9,6 +9,7 @@
   #block-bean-campaign-promotion {
     box-sizing: border-box;
     margin-bottom: 0;
+    margin-top: 1.5em;
     padding-bottom: em(16);
     padding-left: em(8);
     padding-right: em(8);
