--- a/themes/raiser/sass/layouts/_campaign.scss
+++ b/themes/raiser/sass/layouts/_campaign.scss
@@ -97,6 +97,7 @@
     color: $primary;
     left: 0;
     padding-bottom: 2em;
+    margin-bottom: 0;
     padding-top: 2em;
     width: 100%;
     .field-label-inline {
