--- a/themes/raiser/css/styles.css
+++ b/themes/raiser/css/styles.css
@@ -1082,36 +1082,37 @@ form select, form x:-moz-any-link, form x:only-child {
   color: #5e9733;
   left: 0;
   padding-bottom: 2em;
+  margin-bottom: 0;
   padding-top: 2em;
   width: 100%;
 }
-/* line 102, ../sass/layouts/_campaign.scss */
+/* line 103, ../sass/layouts/_campaign.scss */
 .page-redhen-campaign #block-bean-campaign-page-progress .field-label-inline,
 .page-redhen-campaign #block-bean-campaign-progress .field-label-inline,
 .page-redhen-campaign-edit #block-bean-campaign-page-progress .field-label-inline,
 .page-redhen-campaign-edit #block-bean-campaign-progress .field-label-inline {
   display: none;
 }
-/* line 106, ../sass/layouts/_campaign.scss */
+/* line 107, ../sass/layouts/_campaign.scss */
 .page-redhen-campaign #block-bean-campaign-page-progress h2,
 .page-redhen-campaign #block-bean-campaign-progress h2,
 .page-redhen-campaign-edit #block-bean-campaign-page-progress h2,
 .page-redhen-campaign-edit #block-bean-campaign-progress h2 {
   display: none;
 }
-/* line 109, ../sass/layouts/_campaign.scss */
+/* line 110, ../sass/layouts/_campaign.scss */
 .page-redhen-campaign #block-bean-social-media-links,
 .page-redhen-campaign-edit #block-bean-social-media-links {
   margin-left: auto;
   margin-right: auto;
   padding-bottom: 1em;
 }
-/* line 114, ../sass/layouts/_campaign.scss */
+/* line 115, ../sass/layouts/_campaign.scss */
 .page-redhen-campaign #block-bean-social-media-links .field-item,
 .page-redhen-campaign-edit #block-bean-social-media-links .field-item {
   float: left;
 }
-/* line 119, ../sass/layouts/_campaign.scss */
+/* line 120, ../sass/layouts/_campaign.scss */
 .page-redhen-campaign #block-bean-social-media-links a,
 .page-redhen-campaign-edit #block-bean-social-media-links a {
   background-size: 214px;
@@ -1123,43 +1124,43 @@ form select, form x:-moz-any-link, form x:only-child {
   text-indent: -9999px;
   width: 45px;
 }
-/* line 129, ../sass/layouts/_campaign.scss */
+/* line 130, ../sass/layouts/_campaign.scss */
 .page-redhen-campaign #block-bean-social-media-links a.twitter-link,
 .page-redhen-campaign-edit #block-bean-social-media-links a.twitter-link {
   background-position: 0 0;
 }
-/* line 132, ../sass/layouts/_campaign.scss */
+/* line 133, ../sass/layouts/_campaign.scss */
 .page-redhen-campaign #block-bean-social-media-links a.facebook-link,
 .page-redhen-campaign-edit #block-bean-social-media-links a.facebook-link {
   background-position: -56px 0;
 }
-/* line 135, ../sass/layouts/_campaign.scss */
+/* line 136, ../sass/layouts/_campaign.scss */
 .page-redhen-campaign #block-bean-social-media-links a.linkedin-link,
 .page-redhen-campaign-edit #block-bean-social-media-links a.linkedin-link {
   background-position: -112px 0;
 }
-/* line 138, ../sass/layouts/_campaign.scss */
+/* line 139, ../sass/layouts/_campaign.scss */
 .page-redhen-campaign #block-bean-social-media-links a.googleplus-link,
 .page-redhen-campaign-edit #block-bean-social-media-links a.googleplus-link {
   background-position: -168px 0;
 }
-/* line 146, ../sass/layouts/_campaign.scss */
+/* line 147, ../sass/layouts/_campaign.scss */
 .page-redhen-campaign #block-bean-donation-matching,
 .page-redhen-campaign-edit #block-bean-donation-matching {
   margin-right: 1.2em;
   margin-top: 1em;
 }
-/* line 150, ../sass/layouts/_campaign.scss */
+/* line 151, ../sass/layouts/_campaign.scss */
 .page-redhen-campaign #block-bean-donation-matching .block-title,
 .page-redhen-campaign-edit #block-bean-donation-matching .block-title {
   display: none;
 }
-/* line 152, ../sass/layouts/_campaign.scss */
+/* line 153, ../sass/layouts/_campaign.scss */
 .page-redhen-campaign #block-bean-donation-matching .bean-promo,
 .page-redhen-campaign-edit #block-bean-donation-matching .bean-promo {
   text-align: center;
 }
-/* line 155, ../sass/layouts/_campaign.scss */
+/* line 156, ../sass/layouts/_campaign.scss */
 .page-redhen-campaign #block-bean-donation-matching .bean-promo img,
 .page-redhen-campaign-edit #block-bean-donation-matching .bean-promo img {
   -webkit-border-radius: 8px;
@@ -1173,7 +1174,7 @@ form select, form x:-moz-any-link, form x:only-child {
   border: 3px solid white;
   width: 100%;
 }
-/* line 162, ../sass/layouts/_campaign.scss */
+/* line 163, ../sass/layouts/_campaign.scss */
 .page-redhen-campaign #block-bean-donation-matching .bean-promo p,
 .page-redhen-campaign-edit #block-bean-donation-matching .bean-promo p {
   margin: 1em 0;
@@ -3695,12 +3696,13 @@ tr.selected td {
 .region-sidebar-first #block-bean-campaign-promotion {
   box-sizing: border-box;
   margin-bottom: 0;
+  margin-top: 1.5em;
   padding-bottom: 1em;
   padding-left: 0.5em;
   padding-right: 0.5em;
   width: 100%;
 }
-/* line 16, ../sass/components/_sidebar.scss */
+/* line 17, ../sass/components/_sidebar.scss */
 .region-sidebar-first #block-bean-campaign-promotion img {
   -webkit-box-shadow: 0 3px 5px #989898;
   -moz-box-shadow: 0 3px 5px #989898;
@@ -3711,7 +3713,7 @@ tr.selected td {
   padding: 0.1875em;
   width: 100%;
 }
-/* line 24, ../sass/components/_sidebar.scss */
+/* line 25, ../sass/components/_sidebar.scss */
 .region-sidebar-first #block-bean-campaign-promotion .field-name-field-promo-text p {
   box-sizing: border-box;
   font-size: 0.875em;
