--- a/themes/raiser/sass/components/_sidebar.scss
+++ b/themes/raiser/sass/components/_sidebar.scss
@@ -6,7 +6,8 @@
 .region-sidebar-first {
   padding: 0;
 
-  #block-bean-campaign-promotion {
+  #block-bean-campaign-promotion,
+  #block-bean-campaign-page-promotion {
     box-sizing: border-box;
     margin-bottom: 0;
     margin-top: 1.5em;
