--- a/themes/raiser/sass/components/_updates.scss
+++ b/themes/raiser/sass/components/_updates.scss
@@ -1,6 +1,7 @@
 #block-redhen-raiser-campaign-updates-campaign-updates,
 #block-redhen-raiser-campaign-updates-campaign-page-updates,
-.view-campaign-updates {
+.view-campaign-updates,
+.node-type-campaign-update .node-campaign-update {
   @include box-shadow(0 3px 5px $gray);
   background: $white;
   padding: 2em 1em;
@@ -29,5 +30,12 @@
     .field-name-body {
       padding-top: 1em;
     }
+  }
+  .entity-redhen-contact img {
+    @include box-shadow(0 3px 5px $gray);
+    border-radius: em(5);
+    position: absolute;
+    right: em(16);
+
   }
 }
