--- a/themes/raiser/css/styles.css
+++ b/themes/raiser/css/styles.css
@@ -2066,29 +2066,33 @@ footer #colophon a:hover {
   color: white;
 }
 
-/* line 52, ../sass/components/_forms.scss */
+/* line 53, ../sass/components/_forms.scss */
+#redhen-campaign-page-add-form .field-name-redhen-campaign-goal,
 #redhen-campaign-campaign-page-form .field-name-redhen-campaign-goal {
   color: black;
   font-size: 1em;
   padding-left: 0em;
 }
-/* line 56, ../sass/components/_forms.scss */
+/* line 57, ../sass/components/_forms.scss */
+#redhen-campaign-page-add-form .field-name-redhen-campaign-goal .field-prefix,
 #redhen-campaign-campaign-page-form .field-name-redhen-campaign-goal .field-prefix {
   color: #5e9733;
   font-size: 1.375em;
   line-height: 1.75em;
 }
-/* line 61, ../sass/components/_forms.scss */
-#redhen-campaign-campaign-page-form .field-name-redhen-campaign-goal #edit-redhen-campaign-goal-und-0-value {
+/* line 62, ../sass/components/_forms.scss */
+#redhen-campaign-page-add-form .field-name-redhen-campaign-goal input[id^="edit-redhen-campaign-goal-und-0-value"],
+#redhen-campaign-campaign-page-form .field-name-redhen-campaign-goal input[id^="edit-redhen-campaign-goal-und-0-value"] {
   float: right;
   width: 97%;
 }
-/* line 65, ../sass/components/_forms.scss */
+/* line 66, ../sass/components/_forms.scss */
+#redhen-campaign-page-add-form .field-name-redhen-campaign-goal .description,
 #redhen-campaign-campaign-page-form .field-name-redhen-campaign-goal .description {
   clear: both;
 }
 
-/* line 73, ../sass/components/_forms.scss */
+/* line 74, ../sass/components/_forms.scss */
 #edit-field-start-date,
 #edit-field-end-date,
 .main-content-wrapper .field-name-field-end-date,
@@ -2099,7 +2103,7 @@ footer #colophon a:hover {
   margin-left: 0;
   margin-top: 0.5em;
 }
-/* line 79, ../sass/components/_forms.scss */
+/* line 80, ../sass/components/_forms.scss */
 #edit-field-start-date fieldset,
 #edit-field-end-date fieldset,
 .main-content-wrapper .field-name-field-end-date fieldset,
@@ -2107,14 +2111,14 @@ footer #colophon a:hover {
   border: none;
   padding: 0;
 }
-/* line 83, ../sass/components/_forms.scss */
+/* line 84, ../sass/components/_forms.scss */
 #edit-field-start-date .container-inline-date .date-padding,
 #edit-field-end-date .container-inline-date .date-padding,
 .main-content-wrapper .field-name-field-end-date .container-inline-date .date-padding,
 .main-content-wrapper .field-name-field-start-date .container-inline-date .date-padding {
   padding: 0;
 }
-/* line 86, ../sass/components/_forms.scss */
+/* line 87, ../sass/components/_forms.scss */
 #edit-field-start-date .form-item label,
 #edit-field-end-date .form-item label,
 .main-content-wrapper .field-name-field-end-date .form-item label,
@@ -2122,7 +2126,7 @@ footer #colophon a:hover {
   display: none;
 }
 
-/* line 92, ../sass/components/_forms.scss */
+/* line 93, ../sass/components/_forms.scss */
 .form-radio,
 .form-type-radio {
   background: none;
@@ -2154,12 +2158,12 @@ footer #colophon a:hover {
   border: 3px solid #90c965;
   color: white;
 }
-/* line 97, ../sass/components/_forms.scss */
+/* line 98, ../sass/components/_forms.scss */
 .form-radio input,
 .form-type-radio input {
   display: none;
 }
-/* line 100, ../sass/components/_forms.scss */
+/* line 101, ../sass/components/_forms.scss */
 .form-radio .ajax-progress-throbber,
 .form-type-radio .ajax-progress-throbber {
   position: absolute;
@@ -2168,12 +2172,12 @@ footer #colophon a:hover {
   left: 26%;
   font-size: 0.875em;
 }
-/* line 107, ../sass/components/_forms.scss */
+/* line 108, ../sass/components/_forms.scss */
 .form-radio label,
 .form-type-radio label {
   cursor: pointer;
 }
-/* line 110, ../sass/components/_forms.scss */
+/* line 111, ../sass/components/_forms.scss */
 .form-radio.checked,
 .form-type-radio.checked {
   background: #5e9733;
@@ -2181,7 +2185,7 @@ footer #colophon a:hover {
   color: white;
   cursor: default;
 }
-/* line 115, ../sass/components/_forms.scss */
+/* line 116, ../sass/components/_forms.scss */
 .form-radio.checked label,
 .form-type-radio.checked label {
   cursor: default;
@@ -2214,14 +2218,16 @@ footer #colophon a:hover {
   background: #ffab30;
 }
 
-/* line 11, ../sass/components/_fundraise-workflow.scss */
+/* line 12, ../sass/components/_fundraise-workflow.scss */
 .page-redhen-campaign-add-general h2#page-title,
+.page-redhen-campaign-page h2#page-title,
 .page-redhen-campaign-page-add h2#page-title,
 .page-redhen-campaign-edit h2#page-title {
   display: block;
 }
-/* line 15, ../sass/components/_fundraise-workflow.scss */
+/* line 16, ../sass/components/_fundraise-workflow.scss */
 .page-redhen-campaign-add-general .tabs-primary,
+.page-redhen-campaign-page .tabs-primary,
 .page-redhen-campaign-page-add .tabs-primary,
 .page-redhen-campaign-edit .tabs-primary {
   float: left;
@@ -2230,21 +2236,24 @@ footer #colophon a:hover {
   margin-right: -141.66667%;
   float: none;
 }
-/* line 20, ../sass/components/_fundraise-workflow.scss */
+/* line 21, ../sass/components/_fundraise-workflow.scss */
 .page-redhen-campaign-add-general legend,
+.page-redhen-campaign-page legend,
 .page-redhen-campaign-page-add legend,
 .page-redhen-campaign-edit legend {
   color: black;
 }
-/* line 24, ../sass/components/_fundraise-workflow.scss */
+/* line 25, ../sass/components/_fundraise-workflow.scss */
 .page-redhen-campaign-add-general fieldset,
+.page-redhen-campaign-page fieldset,
 .page-redhen-campaign-page-add fieldset,
 .page-redhen-campaign-edit fieldset {
   border: none;
   padding-left: 0;
 }
-/* line 29, ../sass/components/_fundraise-workflow.scss */
+/* line 30, ../sass/components/_fundraise-workflow.scss */
 .page-redhen-campaign-add-general .fieldset-description,
+.page-redhen-campaign-page .fieldset-description,
 .page-redhen-campaign-page-add .fieldset-description,
 .page-redhen-campaign-edit .fieldset-description {
   -webkit-box-shadow: 0 3px 5px #989898;
@@ -2259,15 +2268,17 @@ footer #colophon a:hover {
   width: 25%;
 }
 @media (min-width: 992px) {
-  /* line 29, ../sass/components/_fundraise-workflow.scss */
+  /* line 30, ../sass/components/_fundraise-workflow.scss */
   .page-redhen-campaign-add-general .fieldset-description,
+  .page-redhen-campaign-page .fieldset-description,
   .page-redhen-campaign-page-add .fieldset-description,
   .page-redhen-campaign-edit .fieldset-description {
     display: block;
   }
 }
-/* line 42, ../sass/components/_fundraise-workflow.scss */
+/* line 43, ../sass/components/_fundraise-workflow.scss */
 .page-redhen-campaign-add-general .fieldset-description .fieldset-description-title,
+.page-redhen-campaign-page .fieldset-description .fieldset-description-title,
 .page-redhen-campaign-page-add .fieldset-description .fieldset-description-title,
 .page-redhen-campaign-edit .fieldset-description .fieldset-description-title {
   display: block;
@@ -2275,8 +2286,11 @@ footer #colophon a:hover {
   margin-bottom: 1em;
   margin-top: 0.5em;
 }
-/* line 50, ../sass/components/_fundraise-workflow.scss */
-.page-redhen-campaign-add-general .filter-wrapper, .page-redhen-campaign-add-general .filter-help,
+/* line 52, ../sass/components/_fundraise-workflow.scss */
+.page-redhen-campaign-add-general .filter-wrapper,
+.page-redhen-campaign-add-general .filter-help,
+.page-redhen-campaign-page .filter-wrapper,
+.page-redhen-campaign-page .filter-help,
 .page-redhen-campaign-page-add .filter-wrapper,
 .page-redhen-campaign-page-add .filter-help,
 .page-redhen-campaign-edit .filter-wrapper,
@@ -2285,47 +2299,16 @@ footer #colophon a:hover {
   margin: 0;
   padding: 0;
 }
-/* line 56, ../sass/components/_fundraise-workflow.scss */
-.page-redhen-campaign-add-general .field-name-redhen-campaign-goal,
-.page-redhen-campaign-page-add .field-name-redhen-campaign-goal,
-.page-redhen-campaign-edit .field-name-redhen-campaign-goal {
-  padding-left: 0;
-}
 /* line 59, ../sass/components/_fundraise-workflow.scss */
-.page-redhen-campaign-add-general .field-name-redhen-campaign-goal label,
-.page-redhen-campaign-page-add .field-name-redhen-campaign-goal label,
-.page-redhen-campaign-edit .field-name-redhen-campaign-goal label {
-  color: black;
-  font-size: 0.875em;
-}
-/* line 64, ../sass/components/_fundraise-workflow.scss */
-.page-redhen-campaign-add-general .field-name-redhen-campaign-goal .field-prefix,
-.page-redhen-campaign-page-add .field-name-redhen-campaign-goal .field-prefix,
-.page-redhen-campaign-edit .field-name-redhen-campaign-goal .field-prefix {
-  background: #989898;
-  display: none;
-}
-/* line 69, ../sass/components/_fundraise-workflow.scss */
-.page-redhen-campaign-add-general .field-name-redhen-campaign-goal .description,
-.page-redhen-campaign-page-add .field-name-redhen-campaign-goal .description,
-.page-redhen-campaign-edit .field-name-redhen-campaign-goal .description {
-  color: black;
-  font-size: 0.75em;
-}
-/* line 74, ../sass/components/_fundraise-workflow.scss */
-.page-redhen-campaign-add-general .field-name-redhen-campaign-goal input,
-.page-redhen-campaign-page-add .field-name-redhen-campaign-goal input,
-.page-redhen-campaign-edit .field-name-redhen-campaign-goal input {
-  font-size: 0.875em;
-}
-/* line 79, ../sass/components/_fundraise-workflow.scss */
 .page-redhen-campaign-add-general .container-inline-date .date-padding,
+.page-redhen-campaign-page .container-inline-date .date-padding,
 .page-redhen-campaign-page-add .container-inline-date .date-padding,
 .page-redhen-campaign-edit .container-inline-date .date-padding {
   padding: 0;
 }
-/* line 84, ../sass/components/_fundraise-workflow.scss */
+/* line 64, ../sass/components/_fundraise-workflow.scss */
 .page-redhen-campaign-add-general .field-type-datetime,
+.page-redhen-campaign-page .field-type-datetime,
 .page-redhen-campaign-page-add .field-type-datetime,
 .page-redhen-campaign-edit .field-type-datetime {
   float: left;
@@ -2334,8 +2317,9 @@ footer #colophon a:hover {
   margin-right: -50%;
   margin-right: auto;
 }
-/* line 87, ../sass/components/_fundraise-workflow.scss */
+/* line 67, ../sass/components/_fundraise-workflow.scss */
 .page-redhen-campaign-add-general .field-type-datetime#edit-field-end-date,
+.page-redhen-campaign-page .field-type-datetime#edit-field-end-date,
 .page-redhen-campaign-page-add .field-type-datetime#edit-field-end-date,
 .page-redhen-campaign-edit .field-type-datetime#edit-field-end-date {
   float: left;
@@ -2345,64 +2329,124 @@ footer #colophon a:hover {
   font-size: 1em;
   margin-top: 0;
 }
-/* line 92, ../sass/components/_fundraise-workflow.scss */
+/* line 72, ../sass/components/_fundraise-workflow.scss */
 .page-redhen-campaign-add-general .field-type-datetime label,
+.page-redhen-campaign-page .field-type-datetime label,
 .page-redhen-campaign-page-add .field-type-datetime label,
 .page-redhen-campaign-edit .field-type-datetime label {
   color: black;
   font-size: 1em;
 }
-/* line 97, ../sass/components/_fundraise-workflow.scss */
+/* line 77, ../sass/components/_fundraise-workflow.scss */
 .page-redhen-campaign-add-general .field-type-datetime .description,
+.page-redhen-campaign-page .field-type-datetime .description,
 .page-redhen-campaign-page-add .field-type-datetime .description,
 .page-redhen-campaign-edit .field-type-datetime .description {
   color: black;
 }
-/* line 101, ../sass/components/_fundraise-workflow.scss */
+/* line 81, ../sass/components/_fundraise-workflow.scss */
 .page-redhen-campaign-add-general .field-type-datetime input,
+.page-redhen-campaign-page .field-type-datetime input,
 .page-redhen-campaign-page-add .field-type-datetime input,
 .page-redhen-campaign-edit .field-type-datetime input {
   font-size: 16px;
 }
-
-/* line 108, ../sass/components/_fundraise-workflow.scss */
+/* line 83, ../sass/components/_fundraise-workflow.scss */
 .page-redhen-campaign-add-general .field-type-image,
+.page-redhen-campaign-page .field-type-image,
 .page-redhen-campaign-page-add .field-type-image,
-.page-redhen-campaign-edit .field-type-image,
-.page-redhen-campaign-page .field-type-image {
+.page-redhen-campaign-edit .field-type-image {
   min-height: 2em;
 }
-/* line 110, ../sass/components/_fundraise-workflow.scss */
-.page-redhen-campaign-add-general .field-type-image label,
-.page-redhen-campaign-page-add .field-type-image label,
-.page-redhen-campaign-edit .field-type-image label,
-.page-redhen-campaign-page .field-type-image label {
-  float: left;
-  margin-right: 0.5em;
+/* line 86, ../sass/components/_fundraise-workflow.scss */
+.page-redhen-campaign-add-general .field-type-image .preview .form-item,
+.page-redhen-campaign-add-general .field-type-image .preview .media-item,
+.page-redhen-campaign-page .field-type-image .preview .form-item,
+.page-redhen-campaign-page .field-type-image .preview .media-item,
+.page-redhen-campaign-page-add .field-type-image .preview .form-item,
+.page-redhen-campaign-page-add .field-type-image .preview .media-item,
+.page-redhen-campaign-edit .field-type-image .preview .form-item,
+.page-redhen-campaign-edit .field-type-image .preview .media-item {
+  margin-top: -1em;
+  margin-left: 0;
 }
-/* line 114, ../sass/components/_fundraise-workflow.scss */
+/* line 90, ../sass/components/_fundraise-workflow.scss */
 .page-redhen-campaign-add-general .field-type-image .description,
+.page-redhen-campaign-page .field-type-image .description,
 .page-redhen-campaign-page-add .field-type-image .description,
-.page-redhen-campaign-edit .field-type-image .description,
-.page-redhen-campaign-page .field-type-image .description {
+.page-redhen-campaign-edit .field-type-image .description {
   line-height: 1.7;
 }
-/* line 119, ../sass/components/_fundraise-workflow.scss */
+/* line 95, ../sass/components/_fundraise-workflow.scss */
 .page-redhen-campaign-add-general a.button,
+.page-redhen-campaign-page a.button,
 .page-redhen-campaign-page-add a.button,
-.page-redhen-campaign-edit a.button,
-.page-redhen-campaign-page a.button {
+.page-redhen-campaign-edit a.button {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
   line-height: 1;
 }
-/* line 124, ../sass/components/_fundraise-workflow.scss */
+/* line 100, ../sass/components/_fundraise-workflow.scss */
 .page-redhen-campaign-add-general .form-actions,
+.page-redhen-campaign-page .form-actions,
 .page-redhen-campaign-page-add .form-actions,
-.page-redhen-campaign-edit .form-actions,
-.page-redhen-campaign-page .form-actions {
+.page-redhen-campaign-edit .form-actions {
   clear: both;
+}
+/* line 103, ../sass/components/_fundraise-workflow.scss */
+.page-redhen-campaign-add-general fieldset[id^="edit-field-story-und-0-format"],
+.page-redhen-campaign-page fieldset[id^="edit-field-story-und-0-format"],
+.page-redhen-campaign-page-add fieldset[id^="edit-field-story-und-0-format"],
+.page-redhen-campaign-edit fieldset[id^="edit-field-story-und-0-format"] {
+  font-size: 0.875em;
+  padding-top: 0.5em;
+}
+/* line 106, ../sass/components/_fundraise-workflow.scss */
+.page-redhen-campaign-add-general fieldset[id^="edit-field-story-und-0-format"] .filter-help,
+.page-redhen-campaign-page fieldset[id^="edit-field-story-und-0-format"] .filter-help,
+.page-redhen-campaign-page-add fieldset[id^="edit-field-story-und-0-format"] .filter-help,
+.page-redhen-campaign-edit fieldset[id^="edit-field-story-und-0-format"] .filter-help {
+  float: right;
+  width: 60%;
+  text-align: right;
+}
+/* line 110, ../sass/components/_fundraise-workflow.scss */
+.page-redhen-campaign-add-general fieldset[id^="edit-field-story-und-0-format"] .filter-help a,
+.page-redhen-campaign-page fieldset[id^="edit-field-story-und-0-format"] .filter-help a,
+.page-redhen-campaign-page-add fieldset[id^="edit-field-story-und-0-format"] .filter-help a,
+.page-redhen-campaign-edit fieldset[id^="edit-field-story-und-0-format"] .filter-help a {
+  font-size: 0.875em;
+  padding: 0 1.5em 0 0;
+}
+/* line 115, ../sass/components/_fundraise-workflow.scss */
+.page-redhen-campaign-add-general fieldset[id^="edit-field-story-und-0-format"] .form-type-select,
+.page-redhen-campaign-page fieldset[id^="edit-field-story-und-0-format"] .form-type-select,
+.page-redhen-campaign-page-add fieldset[id^="edit-field-story-und-0-format"] .form-type-select,
+.page-redhen-campaign-edit fieldset[id^="edit-field-story-und-0-format"] .form-type-select {
+  margin: 0;
+  padding: 0;
+}
+/* line 118, ../sass/components/_fundraise-workflow.scss */
+.page-redhen-campaign-add-general fieldset[id^="edit-field-story-und-0-format"] .form-type-select select,
+.page-redhen-campaign-page fieldset[id^="edit-field-story-und-0-format"] .form-type-select select,
+.page-redhen-campaign-page-add fieldset[id^="edit-field-story-und-0-format"] .form-type-select select,
+.page-redhen-campaign-edit fieldset[id^="edit-field-story-und-0-format"] .form-type-select select {
+  height: 1.5em;
+  line-height: 1;
+  padding: 0 1.25em 0 0.5em;
+}
+/* line 124, ../sass/components/_fundraise-workflow.scss */
+.page-redhen-campaign-add-general fieldset[id^="edit-field-story-und-0-format"] .filter-guidelines,
+.page-redhen-campaign-page fieldset[id^="edit-field-story-und-0-format"] .filter-guidelines,
+.page-redhen-campaign-page-add fieldset[id^="edit-field-story-und-0-format"] .filter-guidelines,
+.page-redhen-campaign-edit fieldset[id^="edit-field-story-und-0-format"] .filter-guidelines {
+  display: none;
+}
+
+/* line 131, ../sass/components/_fundraise-workflow.scss */
+#redhen-campaign-page-add-form {
+  width: 66.6%;
 }
 
 /* line 1, ../sass/components/_header.scss */
